--- a/src/SmallsOnline.Subnetting.Pwsh/SmallsOnline.Subnetting.Pwsh.csproj
+++ b/src/SmallsOnline.Subnetting.Pwsh/SmallsOnline.Subnetting.Pwsh.csproj
@@ -32,8 +32,18 @@
     <None Update="SmallsOnline.Subnetting.Pwsh.psd1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="SmallsOnline.Subnetting.Pwsh.dll-Help.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <PackageReference Include="SmallsOnline.Subnetting.Lib" Version="2021.10.0-alpha-03" />
   </ItemGroup>
+
+  <Target Name="CompileHelpFile">
+    <PropertyGroup>
+      <HelpDocs_Folder>$(MSBuildProjectDirectory)$(DirSeparator)help-docs$(DirSeparator)en-US</HelpDocs_Folder>
+    </PropertyGroup>
+    <Exec Command='pwsh -Command "New-ExternalHelp -Path $(HelpDocs_Folder) -OutputPath $(MSBuildProjectDirectory)"' />
+  </Target>
 
   <Target Name="BuildModuleDir">
     <PropertyGroup>
