--- a/.github/workflows/publish-module.yml
+++ b/.github/workflows/publish-module.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           dotnet-version: 5.0.x
 
+      - name: Install platyPS PowerShell module
+        shell: pwsh
+        run: |
+          Install-Module -Name "platyPS" -Force
+
       - name: Configure GitHub package registry source
         run: dotnet nuget add source --username Smalls1652 --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Smalls1652/index.json"
 
@@ -25,7 +30,7 @@ jobs:
         run: dotnet restore "SmallsOnline.Subnetting.Pwsh.sln"
 
       - name: Run MSBuild
-        run: dotnet msbuild "SmallsOnline.Subnetting.Pwsh.sln" -target:"Restore;Clean;Build;Publish;BuildModuleDir" -property:"Configuration=Release;DebugType=none;DebugSymbols=false"
+        run: dotnet msbuild "SmallsOnline.Subnetting.Pwsh.sln" -target:"Restore;Clean;CompileHelpFile;Build;Publish;BuildModuleDir" -property:"Configuration=Release;DebugType=none;DebugSymbols=false"
 
       - name: Publish PowerShell Module
         shell: pwsh
